--- a/different/nested_folder/package.json
+++ b/different/nested_folder/package.json
@@ -1,40 +1,36 @@
 {
-  "name": "docassemble-cucumber",
-  "version": "0.3.0",
-  "description": "Integrated automated end-to-end testing with docassemble, puppeteer, and cucumber.",
-  "main": "lib/index.js",
+  "name": "",
+  "version": "0.1.0",
+  "description": "",
+  "main": "",
+  "directories": {
+    "test": "tests"
+  },
   "scripts": {
-    "test": "echo 'Not sure how to test this'"
+    "test": "echo 'These tests are fake. Use `local`' && mocha tests --timeout 10000",
+    "cucumber": "./node_modules/.bin/cucumber-js --require ./node_modules/docassemble-cucumber/lib/index.js tests/features/*.feature",
+    "setup": "node_modules/.bin/da-setup",
+    "takedown": "node_modules/.bin/da-takedown",
+    "local": "npm run setup && npm run cucumber; npm run takedown"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/plocket/docassemble-cucumber.git"
+    "url": "git+https://github.com/.git"
   },
-  "keywords": [
-    "docassemble",
-    "cucumber",
-    "puppeteer",
-    "automated testing",
-    "integrated testing"
-  ],
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/plocket/docassemble-cucumber/issues"
+    "url": "https://github.com//issues"
   },
-  "homepage": "https://github.com/plocket/docassemble-cucumber#readme",
+  "homepage": "https://github.com/#readme",
   "dependencies": {
+    "bufferutil": "^4.0.1",
     "chai": "^4.2.0",
+    "cucumber": "^6.0.5",
+    "docassemble-cucumber": "^0.3.9",
     "dotenv": "^8.2.0",
     "mocha": "^7.2.0",
-    "puppeteer": "^3.1.0"
-  },
-  "peerDependencies": {
-    "cucumber": "^6.0.5"
-  },
-  "bin": {
-    "da-setup": "./lib/github_integration/setup.js",
-    "da-takedown": "./lib/github_integration/takedown.js",
-    "da-cucumber": "./lib/index.js"
+    "puppeteer": "^3.1.0",
+    "utf-8-validate": "^5.0.2"
   }
 }
